--- a/src/InicioDeSesion.form
+++ b/src/InicioDeSesion.form
@@ -33,7 +33,7 @@
                       </Group>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                          <Component id="pswContraseña" pref="132" max="32767" attributes="0"/>
+                          <Component id="pswContrasenia" pref="132" max="32767" attributes="0"/>
                           <Component id="txtUsuario" max="32767" attributes="0"/>
                       </Group>
                   </Group>
@@ -63,7 +63,7 @@
               <EmptySpace min="-2" pref="37" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="lblContraseña" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="pswContraseña" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="pswContrasenia" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace min="-2" pref="63" max="-2" attributes="0"/>
               <Component id="btnAceptar" min="-2" max="-2" attributes="0"/>
@@ -85,12 +85,15 @@
         <Property name="text" type="java.lang.String" value="Contrase&#xf1;a"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JPasswordField" name="pswContrase&#xf1;a">
+    <Component class="javax.swing.JPasswordField" name="pswContrasenia">
     </Component>
     <Component class="javax.swing.JButton" name="btnAceptar">
       <Properties>
         <Property name="text" type="java.lang.String" value="Aceptar"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnAceptarActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="lblInicioSesion">
       <Properties>
