--- a/src/Bienvenida.form
+++ b/src/Bienvenida.form
@@ -3,6 +3,7 @@
 <Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
+    <Property name="title" type="java.lang.String" value="House of the Future"/>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
@@ -98,6 +99,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Iniciar como invitado"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnIniciarInvitadoActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
