--- a/src/Bienvenida.form
+++ b/src/Bienvenida.form
@@ -35,8 +35,8 @@
           </Group>
           <Group type="102" alignment="1" attributes="0">
               <EmptySpace max="32767" attributes="0"/>
-              <Component id="btnIniciarInvitado" min="-2" max="-2" attributes="0"/>
-              <EmptySpace min="-2" pref="134" max="-2" attributes="0"/>
+              <Component id="btnBuscarAsesorComercial" min="-2" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="115" max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -48,7 +48,7 @@
               <EmptySpace min="-2" pref="13" max="-2" attributes="0"/>
               <Component id="btnRegistrarse" min="-2" max="-2" attributes="0"/>
               <EmptySpace type="separate" max="-2" attributes="0"/>
-              <Component id="btnIniciarInvitado" min="-2" max="-2" attributes="0"/>
+              <Component id="btnBuscarAsesorComercial" min="-2" max="-2" attributes="0"/>
               <EmptySpace min="-2" pref="91" max="-2" attributes="0"/>
           </Group>
       </Group>
@@ -71,12 +71,12 @@
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnRegistrarseActionPerformed"/>
       </Events>
     </Component>
-    <Component class="javax.swing.JButton" name="btnIniciarInvitado">
+    <Component class="javax.swing.JButton" name="btnBuscarAsesorComercial">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Iniciar como invitado"/>
+        <Property name="text" type="java.lang.String" value="Buscar Asesor Comercial"/>
       </Properties>
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnIniciarInvitadoActionPerformed"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnBuscarAsesorComercialActionPerformed"/>
       </Events>
     </Component>
   </SubComponents>
